--- a/YouthActionDotNet/ClientApp/src/styles/main.scss
+++ b/YouthActionDotNet/ClientApp/src/styles/main.scss
@@ -1309,9 +1309,9 @@ nav {
     align-items: center;
     
     position:relative;
+    gap:15px;
     &>.inputBox-Label{
         width: 100%;
-        margin-bottom: 15px;
         text-transform: uppercase;
         font-weight: bold;
         display:flex;
@@ -1451,18 +1451,65 @@ nav {
     background-color: transparent;
     overflow: visible;
     transition:border 0.3s linear;
-    &.file{
-        height: 100%;
-        align-items: stretch;
+    &.file:has(.file-input-preview){
+        height: calc(100% - 28px);
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
+        .stdInput{
+            flex-grow: unset;
+        }
+        
+    }
+    .stdInput{
+        display:flex;
+        align-items: center;
+    }
+    .file-input-preview{
+        margin-left:15px;
+        
     }
     .file-input-thumbnail{
-        flex-grow: 1;
-
+        max-height: 64px;
+        width: 64px;
+        aspect-ratio: 1/1;
+        cursor: pointer;
+        transition:0.3s;
+        &:hover{
+            filter: drop-shadow(0 0 5px rgba($chimericBlack,0.5));
+        }
         img{
             height: 100%;
             width: 100%;
+        }
+    }
+
+    .file-image-modal {
+        display:none;
+        position: fixed;
+        z-index: 100;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.5);
+        align-items: center;
+        justify-content: center;
+        &.show{
+            display: flex;
+        }
+
+        img{
+            max-width: 80%;
+        }
+
+        i{
+            position:absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 1.5rem;
         }
     }
 
@@ -1579,6 +1626,12 @@ nav {
                 transition: 0.3s;
 
             }
+        }
+
+        .stdInput-file[type="file"]{
+            display:flex;
+            align-items: center;
+            display:none;
         }
         &:disabled {
             background-color: rgba(#eee,0.2);
@@ -2949,7 +3002,7 @@ nav {
             row-gap: 15px;
         }
 
-        .file{
+        >.file{
             grid-row: 1 / span 3;
         }
     }
