--- a/YouthActionDotNet/ClientApp/src/styles/main.scss
+++ b/YouthActionDotNet/ClientApp/src/styles/main.scss
@@ -1309,13 +1309,13 @@ nav {
     align-items: center;
     
     position:relative;
-    gap:15px;
     &>.inputBox-Label{
         width: 100%;
         text-transform: uppercase;
         font-weight: bold;
         display:flex;
         justify-content: space-between;
+        margin-bottom: 15px;
 
         .inputToolTip{
             position: relative;
@@ -1373,7 +1373,6 @@ nav {
     }
 
     &.inputSave{
-        
     }
     &.same-line{
         flex-wrap: nowrap;
@@ -1457,22 +1456,49 @@ nav {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
+        gap: 15px;
+        
         .stdInput{
             flex-grow: unset;
         }
         
+        &+.inputSave{
+            height: calc(100% - 28px);
+        }
     }
     .stdInput{
         display:flex;
         align-items: center;
+        cursor: pointer;
     }
+
+    label.stdInput{
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: $borderRadius;
+        transition: 0.3s;
+        &:hover{
+            background-color: $primary;
+            color:white;
+            font-weight: bold;
+        }
+    }
+
     .file-input-preview{
-        margin-left:15px;
-        
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap:7.5px;
+
+        .file-input-file-name{
+            font-weight: bold;
+        }
     }
+
     .file-input-thumbnail{
-        max-height: 64px;
         width: 64px;
         aspect-ratio: 1/1;
         cursor: pointer;
@@ -1549,6 +1575,7 @@ nav {
         outline: none;
         border: none;
         padding-left: 15px;
+        padding-right: 15px;
         background-color: transparent;
         transition: 0.3s;
         position: relative;
@@ -1822,6 +1849,7 @@ nav {
         width: 34px;
         height: 34px;
         right: 50%;
+        height: 100%;
         border-radius: 16px;
     }
 
@@ -1829,6 +1857,7 @@ nav {
         width: 100%;
         opacity: 1;
         right: 0px;
+        height: 100%;
         border-radius: $borderRadius;
     }
 }
