created Permission settings
to do, style permission toggles

--- a/YouthActionDotNet/ClientApp/src/styles/appCommon.scss
+++ b/YouthActionDotNet/ClientApp/src/styles/appCommon.scss
@@ -207,3 +207,12 @@
         }
     }
 }
+
+.access-denied-panel{
+    .header{
+        font-size: 5.2em;
+    }
+    .body{
+        font-size: 2em;
+    }
+}
