--- a/YouthActionDotNet/ClientApp/src/styles/permissions.scss
+++ b/YouthActionDotNet/ClientApp/src/styles/permissions.scss
@@ -1,5 +1,27 @@
 @import "main.scss";
 
+.permission-module-container{
+    gap:15px;
+    
+    .permission-module{
+        font-size: $large-font;
+        font-weight: bold;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    
+    .permission-toggle-group{
+        gap:7.5px;
+    }
+}
+
+
+.permission-toggle-label{
+    font-size: $medium-font;
+}
+
 .module-update-container{
     display:grid;
     grid-template-columns: 1fr 3fr;
