--- a/YouthActionDotNet/ClientApp/src/styles/main.scss
+++ b/YouthActionDotNet/ClientApp/src/styles/main.scss
@@ -4014,3 +4014,50 @@ nav {
         }
     }
 }
+
+.shimmer{
+    width: 100%;
+    height: 100%;
+    
+    content: "";
+
+    min-height: var(--minHeight);
+    min-width: var(--minWidth);
+    max-height: var(--maxHeight);
+    max-width: var(--maxWidth);
+
+    background: linear-gradient(to right, #F6F6F6 8%, #F0F0F0 18%, #F6F6F6 33%);
+    background-size: 400% 400%;
+    animation: shimmer 1.2s linear infinite backwards;
+    
+    &.title-line{
+        height: 24px;
+        width: 100%;
+        margin-bottom: 15px;
+        border-radius: 20px;
+    }
+
+    &.end {
+        width: 40%;
+    }
+
+    &.content-line{
+        height: 8px;
+        width: 100%;
+        margin-bottom: 16px;
+        border-radius: 8px;
+    }
+
+    &.no-padding{
+        margin-bottom: 0;
+    }
+
+    @keyframes shimmer {
+        0% {
+            background-position: -100% 0;
+        }
+        100% {
+            background-position: 100% 0;
+        }
+    }
+}
